--- a/template/page.template
+++ b/template/page.template
@@ -11,7 +11,7 @@
     <body class="is-preload">
 		<div id="page-wrapper">
 
-        	@inputcontent
+        	@content()
 
 			@input(template/footer.content)
 		</div>
